# geom

./: README.md  pyproject.toml
src/gempy_project/: __init__.py  ch1_1_basics.ipynb
