[project]
name = "gempy-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mamun Rashid", email = "mmncit@gmail.com" }
]
dependencies = [
    "gempy>=2024.2.0.2",
    "gempy-viewer>=2024.2.0",
    "matplotlib>=3.10.0",
    "pyvista>=0.44.2",
    "numpy>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gempy_project"]
